--- a/_sass/department.scss
+++ b/_sass/department.scss
@@ -1,3 +1,31 @@
+.department {
+  justify-content: space-around;
+
+  .content {
+    margin: 0;
+    position: relative;
+  }
+
+  // Helps avoid contact button from covering long words on laptop screens
+  .title h1 {
+    padding: 0 2.5rem;
+  }
+
+  @include mq($on-laptop) {
+    .listing {
+      @include columnize-list;
+    }
+    .title h1 {
+      padding: 0;
+    }
+  }
+
+  @include mq($home-breakpoint) {
+    justify-content: revert;
+    align-items: center;
+  }
+}
+
 #contact {
   margin: 0 1.25rem;
 
@@ -52,22 +80,3 @@
     }
   }
 }
-
-.department {
-  position: relative;
-
-  // Helps avoid contact button from covering long words on laptop screens
-  .title h1 {
-    padding: 0 2.5rem;
-  }
-
-  @include mq($on-laptop) {
-    .listing {
-      @include columnize-list;
-    }
-    .title h1 {
-      padding: 0;
-    }
-  }
-}
-
